refatoraçao validações com regex

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
             </div> <!-- fechando form-group -->
 
             <div class="from-group col-sm-6">
-              <div id="resposta" class="form-control"></div>
+              <input type="number" class="form-control" disabled id="resposta">
+              <!-- <div id="resposta" class="form-control"></div> -->
             </div> <!-- fechando form-group -->
             
           </div> <!-- fechando row -->
