--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <!-- Inicio do título e navbar -->
   <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark bg-primary">
-    <div class="container"> 
+    <div class="container-8"> 
       <a class="navbar-brand h1 mb-0" href="index.html">Base2Base</a>
     </div> <!-- fechando container -->
   </nav>
@@ -31,7 +31,7 @@
 
 <!-- Inicio fomulario -->
 
-  <div class="container my-5">
+  <div class="container-6 my-5">
 
     <!-- <div class="row">  -->
       <!-- linha formulario -->
@@ -39,7 +39,7 @@
           <div class="form-row mb-3">
             
 
-              <select class="form-control-4" id="De">
+              <select class="form-control form-control-4" id="De">
                 <option selected>binario</option>
                 <option >base 3</option>
                 <option >base 4</option>
@@ -51,11 +51,11 @@
                 <option >decimal</option>
               </select>
 
-              <button id="converter" class="btn btn-primary form-control-1">
+              <button id="converter" class="form-control form-control-1">
                 <i class="fas fa-exchange-alt"></i>
               </button>
 
-              <select class="form-control-4" id="Para">
+              <select class="form-control form-control-4" id="Para">
                 <option >binario</option>
                 <option >base 3</option>
                 <option >base 4</option>
@@ -70,8 +70,8 @@
           </div> <!-- fechando form row mb 3 -->
 
           <div class="form-row mb-3">
-              <input type="number"  class="form-control-5" id="numero">
-              <input type="number" class="form-control-5" disabled id="resposta">
+              <input type="number"  class="form-control form-control-5" id="numero">
+              <input type="number" class="form-control form-control-5" disabled id="resposta">
           </div> <!-- fechando row -->
 
        
