--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <option >decimal</option>
               </select>
 
-              <button id="converter" class="form-control form-control-1">
+              <button id="converter" class="form-control form-control-1 btn-primary">
                 <i class="fas fa-exchange-alt"></i>
               </button>
 
@@ -69,9 +69,9 @@
            
           </div> <!-- fechando form row mb 3 -->
 
-          <div class="form-row mb-3">
-              <input type="number"  class="form-control form-control-5" id="numero">
-              <input type="number" class="form-control form-control-5" disabled id="resposta">
+          <div class="form-row break">
+              <input type="number"  class="min form-control form-control-5" id="numero">
+              <input type="number" class="min form-control form-control-5" disabled id="resposta">
           </div> <!-- fechando row -->
 
        
