correcao de interface

--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Bootstrap CSS --> 
-
-  <!-- <link rel="stylesheet" href="node_modules/bootstrap/compiler/bootstrap.css"> -->
-  
-  <!-- Meu CSS -->
-  <!-- <link rel="stylesheet" href="node_modules/bootstrap/compiler/estilo.css"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
   <link rel="stylesheet" href="css/estilo.css">
 
   <link rel="stylesheet" href="css/font-awesome/css/all.css">
