--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
         
-  <script src="js/jquery.js"></script>
+  <!-- <script src="js/jquery.js"></script> -->
   <script src="js/converter.js"></script>
         
 </body>
